[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/PauseMenu/UI_Mock_Up_Pause_BG.png" type="Texture" id=2]
[ext_resource path="res://Fonts/hoboStandard.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/MenuButton/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menus/YesNoOverlay/YesNoOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/OptionsOverlay/OptionsOverlay.tscn" type="PackedScene" id=6]

[node name="PauseMenu" type="Container"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 317.0
margin_top = 156.0
margin_right = 357.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -317.0
margin_top = -156.0
margin_right = 323.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="." index="1"]

modulate = Color( 0.675781, 0.703644, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -29.0
margin_top = -124.0
margin_right = 1192.0
margin_bottom = 149.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "paused"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="ResumeButton" parent="." index="2" instance=ExtResource( 4 )]

margin_left = -125.0
margin_top = -65.0
margin_right = 99.0
margin_bottom = -29.0

[node name="Label" parent="ResumeButton" index="0"]

modulate = Color( 0.295288, 0.324413, 0.640625, 1 )
margin_left = 96.0
margin_right = 1221.0
text = "resume"

[node name="RestartButton" parent="." index="3" instance=ExtResource( 4 )]

margin_left = -125.0
margin_top = -20.0
margin_right = 99.0
margin_bottom = 16.0

[node name="Label" parent="RestartButton" index="0"]

modulate = Color( 0.294118, 0.321569, 0.639216, 1 )
margin_left = 69.0
margin_right = 1167.0
text = "restart level"

[node name="OptionsButton" parent="." index="4" instance=ExtResource( 4 )]

margin_left = -125.0
margin_top = 25.0
margin_right = 99.0
margin_bottom = 61.0

[node name="Label" parent="OptionsButton" index="0"]

modulate = Color( 0.294118, 0.321569, 0.639216, 1 )
margin_left = 95.0
margin_right = 1193.0
text = "options"

[node name="MainMenuButton" parent="." index="5" instance=ExtResource( 4 )]

margin_left = -125.0
margin_top = 70.0
margin_right = 99.0
margin_bottom = 106.0

[node name="Label" parent="MainMenuButton" index="0"]

modulate = Color( 0.294118, 0.321569, 0.639216, 1 )
margin_left = 80.0
margin_top = 2.0
margin_right = 1178.0
margin_bottom = 275.0
text = "main menu"

[node name="YesNoOverlayMainMenu" parent="." index="6" instance=ExtResource( 5 )]

visible = false

[node name="YesNoOverlayRestart" parent="." index="7" instance=ExtResource( 5 )]

visible = false

[node name="OptionsOverlay" parent="." index="8" instance=ExtResource( 6 )]

visible = false
margin_left = 56.0
margin_top = 41.0
margin_right = 88.0
margin_bottom = 70.0

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]


[editable path="ResumeButton"]
[editable path="RestartButton"]
[editable path="OptionsButton"]
[editable path="MainMenuButton"]
